# python_cicd_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
scripts/: format.sh  lint.sh  test.sh
src/python_cicd_template/: __init__.py
src/test_ci/: __init__.py  calculator.py
tests/: test_calculator.py
