[project]
name = "test-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jun Yang", email = "handsomeyang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
test-ci = "test_ci:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "coverage>=7.13.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
