[project]
name = "python_cicd_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jun Yang", email = "handsomeyang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-cicd-template = "python_cicd_template:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=python_cicd_template",
    "--cov-report=xml"
]

[tool.coverage.run]
source = ["python_cicd_template"]
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
strict = true
files = ["src"]
exclude = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
